//指定版本
//注意proto3与proto2的写法有些不同
syntax = "proto3";

//包名，通过protoc生成时go文件时
package node;

message NodeInfo {
    string client_address = 1;
    int64 client_count = 2;
    int64 timestamp = 3;
}